[package]
name = "boxer-issuer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4.9.0"
futures-util = "0.3.8"
jwt = "0.16.0"
opentelemetry-datadog = "0.12.0"
async-trait = "0.1.81"
jwt-authorizer = "0.15.0"
env_logger = "0.11.5"
serde_json = "1.0.125"
anyhow = "1.0.86"
log = { version=  "0.4.22", features = ["kv"] }
flate2 = "1.0"
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.8"

[dev-dependencies]
rstest = "0.22.0"
